# hakoniwa-pdu-registry

./: README.md  test-spec-binary-conversion.md
config/: ros_msgs.txt  search_path.txt
docker/: Dockerfile  attach.bash  create-image.bash  image_name.txt  pull-image.bash  run.bash
docs/: README.md
docs/specs/: godot-binding-design.md  pdu-binary-format.md
generators/generate_hako_pdu_msgs/: code_generator.py  main.py  offset_calculator.py  size_registry_generator.py  validate_generated_artifacts.py
generators/generate_hako_service_msgs/: main.py
generators/hakoniwa_pdu_generator/: main.py
idl/hako_msgs/msg/: DroneVisualState.msg  DroneVisualStateArray.msg  ExecutionUnitRuntimeNode.msg  ExecutionUnitRuntimeRuntimeContext.msg  ExecutionUnitRuntimeRuntimeEpoch.msg  ExecutionUnitRuntimeRuntimeStatus.msg
idl/msg_conv_test/src/: msg_conv_test.cpp
pdu/csharp/geometry_msgs/: Accel.cs  AccelStamped.cs  AccelWithCovariance.cs  AccelWithCovarianceStamped.cs  Inertia.cs  InertiaStamped.cs  Point32.cs  PointStamped.cs  Polygon.cs  PolygonStamped.cs  Pose2D.cs  PoseArray.cs  PoseStamped.cs  PoseWithCovarianceStamped.cs  QuaternionStamped.cs  TwistStamped.cs  TwistWithCovarianceStamped.cs  Vector3Stamped.cs  Wrench.cs  WrenchStamped.cs
pdu/csharp/hako_msgs/: DroneVisualState.cs  DroneVisualStateArray.cs  ExecutionUnitRuntimeContext.cs  ExecutionUnitRuntimeEpoch.cs  ExecutionUnitRuntimeNode.cs  ExecutionUnitRuntimeStatus.cs
pdu/csharp/nav_msgs/: GridCells.cs  MapMetaData.cs  OccupancyGrid.cs  Path.cs
pdu/csharp/sensor_msgs/: BatteryState.cs  ChannelFloat32.cs  FluidPressure.cs  Illuminance.cs  Joy.cs  JoyFeedback.cs  JoyFeedbackArray.cs  LaserEcho.cs  MagneticField.cs  MultiDOFJointState.cs  MultiEchoLaserScan.cs  NavSatFix.cs  NavSatStatus.cs  PointCloud.cs  Range.cs  RelativeHumidity.cs  Temperature.cs  TimeReference.cs
pdu/csharp/std_msgs/: Empty.cs
pdu/csharp/tf2_msgs/: TF2Error.cs
pdu/csharp_v2/builtin_interfaces/: pdu_conv_Time.cs  pdu_type_Time.cs
pdu/csharp_v2/can_msgs/: pdu_conv_HakoCan.cs  pdu_conv_HakoCanBody.cs  pdu_conv_HakoCanHead.cs  pdu_type_HakoCan.cs  pdu_type_HakoCanBody.cs  pdu_type_HakoCanHead.cs
pdu/csharp_v2/drone_srv_msgs/: pdu_conv_CameraCaptureImageRequest.cs  pdu_conv_CameraCaptureImageRequestPacket.cs  pdu_conv_CameraCaptureImageResponse.cs  pdu_conv_CameraCaptureImageResponsePacket.cs  pdu_conv_CameraSetTiltRequest.cs  pdu_conv_CameraSetTiltRequestPacket.cs  pdu_conv_CameraSetTiltResponse.cs  pdu_conv_CameraSetTiltResponsePacket.cs  pdu_conv_DroneGetStateRequest.cs  pdu_conv_DroneGetStateRequestPacket.cs  pdu_conv_DroneGetStateResponse.cs  pdu_conv_DroneGetStateResponsePacket.cs  pdu_conv_DroneGoToRequest.cs  pdu_conv_DroneGoToRequestPacket.cs  pdu_conv_DroneGoToResponse.cs  pdu_conv_DroneGoToResponsePacket.cs  pdu_conv_DroneLandRequest.cs  pdu_conv_DroneLandRequestPacket.cs  pdu_conv_DroneLandResponse.cs  pdu_conv_DroneLandResponsePacket.cs  pdu_conv_DroneSetReadyRequest.cs  pdu_conv_DroneSetReadyRequestPacket.cs  pdu_conv_DroneSetReadyResponse.cs  pdu_conv_DroneSetReadyResponsePacket.cs  pdu_conv_DroneTakeOffRequest.cs  pdu_conv_DroneTakeOffRequestPacket.cs  pdu_conv_DroneTakeOffResponse.cs  pdu_conv_DroneTakeOffResponsePacket.cs  pdu_conv_LiDARScanRequest.cs  pdu_conv_LiDARScanRequestPacket.cs  pdu_conv_LiDARScanResponse.cs  pdu_conv_LiDARScanResponsePacket.cs  pdu_conv_MagnetGrabRequest.cs  pdu_conv_MagnetGrabRequestPacket.cs  pdu_conv_MagnetGrabResponse.cs  pdu_conv_MagnetGrabResponsePacket.cs  pdu_type_CameraCaptureImageRequest.cs  pdu_type_CameraCaptureImageRequestPacket.cs  pdu_type_CameraCaptureImageResponse.cs  pdu_type_CameraCaptureImageResponsePacket.cs  (+32 more)
pdu/csharp_v2/ev3_msgs/: pdu_conv_Ev3PduActuator.cs  pdu_conv_Ev3PduActuatorHeader.cs  pdu_conv_Ev3PduColorSensor.cs  pdu_conv_Ev3PduMotor.cs  pdu_conv_Ev3PduSensor.cs  pdu_conv_Ev3PduSensorHeader.cs  pdu_conv_Ev3PduTouchSensor.cs  pdu_type_Ev3PduActuator.cs  pdu_type_Ev3PduActuatorHeader.cs  pdu_type_Ev3PduColorSensor.cs  pdu_type_Ev3PduMotor.cs  pdu_type_Ev3PduSensor.cs  pdu_type_Ev3PduSensorHeader.cs  pdu_type_Ev3PduTouchSensor.cs
pdu/csharp_v2/geometry_msgs/: pdu_conv_Accel.cs  pdu_conv_AccelStamped.cs  pdu_conv_AccelWithCovariance.cs  pdu_conv_AccelWithCovarianceStamped.cs  pdu_conv_Inertia.cs  pdu_conv_InertiaStamped.cs  pdu_conv_Point.cs  pdu_conv_Point32.cs  pdu_conv_PointStamped.cs  pdu_conv_Polygon.cs  pdu_conv_PolygonStamped.cs  (+47 more)
pdu/javascript/: pdu_size.js  pdu_utils.js
pdu/python/: binary_io.py  pdu_size.py  pdu_utils.py
pdu/types/: pdu_primitive_ctypes.h  pdu_size_registry.c  pdu_size_registry.h
template/: pdu_cdr_runtime_hpp.tpl  pdu_cpptype_cdr_conv_hako_template.hpp.j2  pdu_csharp_v2_conv_cs.tpl  pdu_csharp_v2_runtime_cs.tpl  pdu_csharp_v2_type_cs.tpl  pdu_godot_conv_hpp.tpl  pdu_godot_runtime_hpp.tpl  pdu_godot_types_gd.tpl  pdu_js_conv_js.tpl  pdu_jstypes_js.tpl  pdu_py_conv_py.tpl
tests/: __init__.py  test_cdr_generator.py  test_csharp_v2_generator.py  test_csharp_v2_runtime.py  test_generated_artifacts.py  test_godot_cpp_bridge.py  test_godot_generator.py  test_godot_runtime.py
tests/cpp/: CMakeLists.txt  camera_info_cpp_dump.cpp  cdr_conversion_test.cpp  cdr_oracle_tool.cpp  disturbance_cpp_dump.cpp  disturbance_cpp_interop_test.cpp  disturbance_user_custom_cpp_dump.cpp  disturbance_user_custom_cpp_interop_test.cpp  drone_visual_state_array_cpp_dump.cpp  drone_visual_state_cpp_interop_test.cpp  float64_multi_array_cpp_dump.cpp  game_controller_operation_cpp_dump.cpp  game_controller_operation_cpp_interop_test.cpp  joint_state_cpp_dump.cpp  joint_state_cpp_interop_test.cpp  laser_scan_cpp_dump.cpp  multi_array_layout_cpp_dump.cpp  point_cloud2_cpp_dump.cpp  point_cloud2_cpp_interop_test.cpp  simple_struct_varray_cpp_dump.cpp  simple_struct_varray_cpp_interop_test.cpp
tests/csharp_v2_smoke/: CSharpV2Smoke.csproj  Program.cs
tests/godot_cpp_smoke/: CMakeLists.txt  hako_pdu_godot_smoke.gdextension
tests/godot_cpp_smoke/src/: godot_pdu_smoke_bridge.cpp  godot_pdu_smoke_bridge.hpp  register_types.cpp
tools/: generate_ros2_type_hash.py
(+1714 files in other folders)
